javascript code added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
   </head>
   <body>
-    <h2>hello, welcome to this website</h2>
+    <h2>Hello, welcome to this website</h2>
+    <label for="reverse">Enter String</label>
+    <input type="text" id="reverse" />
+    <button onclick="reverseString()">Reverse String</button>
+    <label for="result1"></label>
+    <input type="text" id="result1" />
   </body>
+  <script src="./index.js"></script>
 </html>
