--- a/index.html
+++ b/index.html
@@ -6,12 +6,51 @@
     <title>Document</title>
   </head>
   <body>
-    <h2>Hello, welcome to this website</h2>
-    <label for="reverse">Enter String</label>
-    <input type="text" id="reverse" />
-    <button onclick="reverseString()">Reverse String</button>
-    <label for="result1"></label>
-    <input type="text" id="result1" />
+    <div>
+      <h2>Easy Level</h2>
+      <div style="margin: 10px;">
+        <label for="reverse">Q1. Enter String:</label>
+        <input type="text" id="reverse" />
+        <button onclick="reverseString()">Reverse String</button>
+        <label for="result1"></label>
+        <input
+          type="text"
+          id="result1"
+          style="font-weight: 600"
+          placeholder="Result"
+          disabled
+        />
+      </div>
+      <div style="margin: 10px;">
+        <label for="palindrome">Q2. Enter String:</label>
+        <input type="text" id="palindrome" />
+        <button onclick="isPalindrome()">Check palindrome</button>
+        <label for="result2"></label>
+        <input
+          type="text"
+          id="result2"
+          style="font-weight: 600"
+          placeholder="Result"
+          disabled
+        />
+      </div>
+      <div style="margin: 10px;">
+        <label for="largestEle">Q3. Enter numbers separated by commas:</label>
+        <input type="text" id="largestEle" placeholder="e.g., 10, 45, 32, 89" />
+        <button onclick="findLargest()">Find Largest</button>
+        <label for="result3"></label>
+        <input
+          type="text"
+          id="result3"
+          style="font-weight: 600"
+          placeholder="Result"
+          disabled
+        />
+      </div>
+    </div>
+    <div style="margin-top: 10px;">
+      <h2>Medium Level</h2>
+    </div>
   </body>
   <script src="./index.js"></script>
 </html>
