postlab and last Q

--- a/JS Problems/index.html
+++ b/JS Problems/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- <link rel="stylesheet" href="style.css"> -->
   </head>
   <body>
     <div>
@@ -72,10 +73,18 @@
         <p id="output"></p>
       </div>
       <div>
-        <p>Q6. Expression Evaluator</p>
-        <input type="text" id="expression" placeholder="Enter expression" />
-        <button onclick="evaluateExpression()">Evaluate</button>
-        <p>Result: <span id="result"></span></p>
+        <h2>Difficult Level</h2>
+        <div>
+          <p>Q6. Expression Evaluator</p>
+          <input type="text" id="expression" placeholder="Enter expression" />
+          <button onclick="evaluateExpression()">Evaluate</button>
+          <p>Result: <span id="result"></span></p>
+        </div>
+        <div>
+          <p>Q7. Task Execution Manager</p>
+          <button onclick="startTasks()">Start Tasks</button>
+          <ul id="task-list"></ul>
+        </div>
       </div>
     </div>
   </body>
